# dci-controller

./: .gitignore  HACKING.rst  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.py  tox.ini
api-ref/source/: conf.py  index.rst
api-ref/source/v1/: index.rst
dci/: __init__.py  driver.py  manager.py  version.py
dci/api/: app.py  config.py  expose.py  hooks.py  wsgi_app.py
dci/api/controllers/: base.py  link.py  root.py  types.py
dci/api/middleware/: __init__.py  parsable_error.py
dci/cmd/: .dbsync.py.swp  api.py  dbsync.py
dci/common/: config.py  constants.py  exception.py  i18n.py  paths.py  service.py  sshclient.py  utils.py
dci/conf/: __init__.py  api.py  db.py  opts.py
dci/db/: api.py  migration.py  types.py
dci/db/sqlalchemy/: alembic.ini  api.py  migration.py  models.py
dci/device_manager/: api.py  base_driver.py
dci/device_manager/drivers/: base_netconflib.py
dci/drivers/: base_netconflib.py  netconf_lib.py
dci/drivers/huawei/: netconflib.py  (+1 more)
dci/huawei/: netengine_api.py
dci/juniper/: mx_api.py  tf_vnc_api.py
dci/objects/: __init__.py  base.py  evpn_vpls_over_srv6_be_slicing.py  fields.py  l2evpn_dci.py  l3evpn_dci.py  l3vpn_srv6_slicing.py  site.py  wan_node.py
dci/sdnc_manager/: api.py
dci/task_flows/: flows.py  tasks.py
deployment/: Dockerfile  bootstrap.sh  docker-compose.yml  docker-entrypoint.sh
doc/: requirements.txt
doc/source/: conf.py  index.rst
etc/dci-controller/: README.dci-controller.conf  api-paste.ini  dci-controller.conf
tools/config/: dci-controller-config-generator.conf
(+70 files in other folders)
