[metadata]
name = dci-controller
summary = DCI Controller
description-file =
    README.md
classifier =
    Environment :: SDN
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    dci

[entry_points]
oslo.config.opts =
    dci.conf = dci.conf.opts:list_opts

console_scripts =
    dci-controller-api = dci.cmd.api:main
    dci-controller-dbsync = dci.cmd.dbsync:main

dci.database.migration_backend =
    sqlalchemy = dci.db.sqlalchemy.migration
